# Classroom-Agent

./: .gitignore  CLAUDE.md  README.md  main.py  plan.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-12-improvements-v2.md  2026-06-12-ta-agent-rework.md
docs/superpowers/specs/: 2026-06-12-improvements-v2-design.md  2026-06-12-ta-agent-rework-design.md
rubrics/: rubric.yaml
ta/: __init__.py  agent.py  cli.py  config.py  google_auth.py  session.py  state.py
ta/skills/: __init__.py  content.py  grading.py  planning.py  time.py
ta/tools/: __init__.py  accounts.py  calendar.py  classroom.py  docs.py  drive.py  files.py  grading.py  memory.py  office.py  planning.py  workspace.py
tests/: conftest.py  test_agent.py  test_auth.py  test_classroom_admin.py  test_cli.py  test_content_module.py  test_grading.py  test_state.py  test_tools_classroom.py  test_tools_drive.py  test_tools_grading.py  test_warnings.py
