[project]
name = "agentes"
version = "0.1.0"
description = "LangGraph AI Teaching Assistant for Google Classroom"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.196.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "langgraph>=1.2.1",
    "langchain>=1.3.1",
    "langchain-nvidia-ai-endpoints>=1.4.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "python-pptx>=1.0.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.7",
    "notebook>=7.5.6",
    "deepagents>=0.6.8",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "tenacity>=9.1.4",
    "prompt-toolkit>=3.0.52",
    "langchain-google-genai>=4.2.5",
    "aiosqlite>=0.22.1",
    "fpdf2>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
